--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:title" content="Hexanaut.io">
     <meta property="og:description" content="3D multiplayer io game: capture hexagons by enclosing territory and become the king! Seize totems for extra powers. Wait for time-out or kill all enemies like a battle royale. Play online for free in browser and mobile, no app or download.">
-    <meta property="og:url" content="https://hexanaut.io/">
+    <meta property="og:url" content="https://prestondonut340.github.io/hexanaut-io/">
 
     <meta property="og:image" content="https://hexanaut.io/img/banners/1200x630.png">
     <meta property="og:image:width" content="1200">
@@ -264,8 +264,8 @@
                 </div>
 
                 <div class="text-footer">
-                    <a href="about.html">About</a>&nbsp;-
-                    <a href="privacypolicy.html" target="_blank">Privacy policy</a>&nbsp;-
+                    <a href="https://hexanaut.io/about.html">About</a>&nbsp;-
+                    <a href="https://hexanaut.io/privacy.html" target="_blank">Privacy policy</a>&nbsp;-
                     <a href="#" title="Message us" onclick="doorbell.show();">Contact us</a>
                 </div>
                 <button id="more"><a href="https://www.crazygames.com/c/io" target="_blank">More IO Games</a></button>
