--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         gtag('config', 'G-FE34VYMZLW', gtagconf);
 
     </script>
-    -->    <script src="../apis.google.com/js/platform.js" async="" defer="" onload="gapi.load('auth2');"></script>
+    -->    <script src="apis.google.com/js/platform.js" async="" defer="" onload="gapi.load('auth2');"></script>
     <meta name="google-signin-client_id" content="430648130201-o5g9slasjjk1mo8rt4178h67f58iepuc.apps.googleusercontent.com">
     <script type="text/javascript">
         function onGoogleSignIn(u) {
