--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html>
-<!-- Mirrored from hexanaut.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Jun 2022 15:33:20 GMT -->
+<!--index.html Mirrored from hexanaut.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Jun 2022 15:33:20 GMT -->
 <head><script>if (document.location.protocol === "index.html") document.location.href = document.location.href.replace(/^http:/, "https:");</script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">    <script src="cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script><script src="hexanaut.js" async=""></script>    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Hexanaut.io - free 3D multiplayer snake game</title>
