--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html>
 <!-- Mirrored from hexanaut.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 18 Jun 2022 15:33:20 GMT -->
 <head><script>if (document.location.protocol === "index.html") document.location.href = document.location.href.replace(/^http:/, "https:");</script>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">    <script src="../cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script><script src="hexanaut.js" async=""></script>    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">    <script src="cdn.ravenjs.com/3.26.2/raven.min.js" crossorigin="anonymous"></script><script src="hexanaut.js" async=""></script>    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Hexanaut.io - free 3D multiplayer snake game</title>
 
     <meta name="description" content="3D multiplayer io game: capture hexagons by enclosing territory and become the king! Seize totems for extra powers. Wait for time-out or kill all enemies like a battle royale. Play online for free in browser and mobile, no app or download.">
@@ -9,7 +9,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:title" content="Hexanaut.io">
     <meta property="og:description" content="3D multiplayer io game: capture hexagons by enclosing territory and become the king! Seize totems for extra powers. Wait for time-out or kill all enemies like a battle royale. Play online for free in browser and mobile, no app or download.">
-    <meta property="og:url" content="https://hexanaut.io/">
+    <meta property="og:url" content="https://prestondonut340.github.io/hexanaut-io/">
 
     <meta property="og:image" content="https://hexanaut.io/img/banners/1200x630.png">
     <meta property="og:image:width" content="1200">
