--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                 </div>
 
                 <div class="text-footer">
-                    <a href="about.html">About</a>&nbsp;-
-                    <a href="privacypolicy.html" target="_blank">Privacy policy</a>&nbsp;-
+                    <a href="https://hexanaut.io/about.html">About</a>&nbsp;-
+                    <a href="https://hexanaut.io/privacypolicy.html" target="_blank">Privacy policy</a>&nbsp;-
                     <a href="#" title="Message us" onclick="doorbell.show();">Contact us</a>
                 </div>
                 <button id="more"><a href="https://www.crazygames.com/c/io" target="_blank">More IO Games</a></button>
@@ -644,9 +644,7 @@
                 </div>
 
                 <div id="ds-buttons-block" class="block-buttons">
-                    <div class="feedback">
-                        <a href="#" title="Message us" onclick="doorbell.show();">Please tell us about your experience</a>
-                    </div> <button id="button-replay">
+                     <button id="button-replay">
                         <div id="button-replay-text">
                             REPLAY
                         </div>
